<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/abc_ab_bottom_solid_dark_holo">


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:tag="@string/button1"
        android:onClick="playSound"
        android:src="@drawable/tangled" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"
        android:onClick="playSound"
        android:tag="@string/button2"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageButton1"
        android:labelFor="10"
        android:longClickable="false"
        android:src="@drawable/seethelight" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_below="@+id/imageButton1"
        android:layout_alignParentLeft="true"
        android:tag="@string/button3"
        android:src="@drawable/mermaid"
        android:onClick="playSound" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton3"
        android:layout_alignTop="@+id/imageButton"
        android:layout_alignLeft="@+id/imageButton2"
        android:tag="@string/button4"
        android:src="@drawable/underthesea"
        android:onClick="playSound" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton4"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentLeft="true"
        android:tag="@string/button5"
        android:src="@drawable/belle"
        android:onClick="playSound" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton5"
        android:tag="@string/button6"
        android:layout_below="@+id/imageButton"
        android:layout_toRightOf="@+id/imageButton"
        android:src="@drawable/gotadream"
        android:onClick="playSound" />

</RelativeLayout>
